Minor layout fixes on mobile

--- a/source/_assets/css/documentation.pcss
+++ b/source/_assets/css/documentation.pcss
@@ -21,6 +21,12 @@
 
 
 
+    ul {
+        @apply list-inside lg:list-outside;
+    }
+
+
+
     ul.table-of-contents {
         @apply list-none;
 
