--- a/source/_assets/css/navigation.pcss
+++ b/source/_assets/css/navigation.pcss
@@ -1,7 +1,7 @@
 @layer components {
 
     .nav-menu {
-        @apply -mt-12 -mx-8 bg-navy-200 mb-8 pb-4 pt-8 px-4 shadow w-auto;
+        @apply -mt-12 -ml-6 w-screen bg-navy-200 mb-8 pb-4 pt-8 px-4 shadow;
 
         @screen lg {
             @apply -mx-4 bg-transparent block border-b-0 mt-1 pl-0 pr-4 pt-0 shadow-none w-1/4;
